--- a/signup.html
+++ b/signup.html
@@ -6,6 +6,8 @@
   <title>GlowSomeMore | Account</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="signup.css"/>
+  <p>Already have an account? <a href="login.html">Log in</a></p>
+
 </head>
 <body>
   <div class="container" style="max-width: 500px; margin: 60px auto;">
