--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
           <li class="nav-item"><a class="nav-link text-pink" href="#skincare-showcase">Skincare</a></li>
           <li class="nav-item"><a class="nav-link text-pink" href="#testimonials">Reviews</a></li>
           <li class="nav-item"><a class="nav-link text-pink" href="#contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link text-pink" href="signup.html">Account</a></li>
+
           <li class="nav-item">
   <a class="nav-link text-pink position-relative" href="#cart">
     🛒 Cart <span id="cartCount" class="badge bg-pink position-absolute top-0 start-100 translate-middle">0</span>
